@@ -55,7 +55,7 @@ import java.awt.*;
  *
  * @author Slava Pestov
  * @author John Gellene (API documentation)
- * @version $Id: AbstractOptionPane.java,v 1.16 2003/05/01 02:21:26 spestov Exp $
+ * @version $Id: AbstractOptionPane.java,v 1.17 2003/05/22 23:43:16 spestov Exp $
  */
 // even though this class is called AbstractOptionPane, it is not really
 // abstract, since BufferOptions uses an instance of it to lay out its
@@ -212,6 +212,29 @@ public class AbstractOptionPane extends JPanel implements OptionPane
 		cons.gridheight = 1;
 		cons.gridwidth = cons.REMAINDER;
 		cons.fill = GridBagConstraints.NONE;
+		cons.anchor = GridBagConstraints.WEST;
+		cons.weightx = 1.0f;
+		cons.insets = new Insets(1,0,1,0);
+
+		gridBag.setConstraints(comp,cons);
+		add(comp);
+	} //}}}
+
+	//{{{ addComponent() method
+	/**
+	 * Adds a component to the option pane. Components are
+	 * added in a vertical fashion, one per row.
+	 * @param comp The component
+	 * @param fill Fill parameter to GridBagConstraints
+	 * @since jEdit 4.2pre2
+	 */
+	public void addComponent(Component comp, int fill)
+	{
+		GridBagConstraints cons = new GridBagConstraints();
+		cons.gridy = y++;
+		cons.gridheight = 1;
+		cons.gridwidth = cons.REMAINDER;
+		cons.fill = fill;
 		cons.anchor = GridBagConstraints.WEST;
 		cons.weightx = 1.0f;
 		cons.insets = new Insets(1,0,1,0);
