@@ -165,6 +165,9 @@ release.
 
 - Added long-missing DefaultInputHandler.removeKeyBinding() method.
 
+- Added AbstractOptionPane.addComponent(Component comp, int fill)
+  method.
+
 }}}
 
 }}}
